Add first version management system
Add first version management system.
App class stores VERSION_NAME and VERSION_NUMBER
MainController.setVersionLimits() calls VideoController.setMaxVideoDuration()
MainController.checkDiskSpace() checks disk space before start recording